--- a/index.html
+++ b/index.html
@@ -11,38 +11,38 @@
     <title>Evento anual de marketing</title>
   </head>
   <body>
-    <header>
-      <nav class="navbar navbar-expand-sm bg-dark" data-bs-theme="dark">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Marketing Mundial</a>
+    <nav class="navbar navbar-expand-sm bg-dark sticky-top" data-bs-theme="dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Marketing Mundial</a>
 
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Cadastro</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Lista de usuários</a>
-              </li>
-            </ul>
-          </div>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Cadastro</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Lista de usuários</a>
+            </li>
+          </ul>
         </div>
-      </nav>
+      </div>
+    </nav>
+    <header>
       <div
         id="carouselExampleIndicators"
         class="carousel slide"
@@ -144,19 +144,75 @@
 
     <main class="container-fluid bg-light">
       <!-- PERFIS DOS PALESTRANTES -->
-      <section class="container">
+      <section class="container mt-3">
         <div class="row">
-          <div>
-            <img src="assets/perfil/perfil1.png" alt="" class="rounded-circle img-thumbnail">
-            <h2>Mauro Silva</h2>
-            <p>Especialista em Marketing de Mídias Sociais Mauro é um estrategista de mídias sociais experiente, com mais de 10 anos de atuação no mercado</p>
-            <a href="#">Mais detalhes</a>
-          </div>
-        </div>
 
+          <div class="col-lg-4 col-md-6 d-flex flex-column justify-content-between align-items-center mb-2" >
+            <img
+              src="assets/perfil/perfil1.png"
+              alt=""
+              class="rounded-circle img-thumbnail w-200"
+            />
+            <h2 class="fw-normal">Mauro Silva</h2>
+            <p>
+              Especialista em Marketing de Mídias Sociais Mauro é um
+              estrategista de mídias sociais experiente, com mais de 10 anos de atuação no mercado.
+            </p>
+            <a href="#" class="btn btn-secondary">Mais detalhes</a>
+          </div>
+
+          <div class="col-lg-4 col-md-6 text-center mb-2">
+            <img
+              src="assets/perfil/perfil2.jpg"
+              alt="imagem de perfil"
+              class="rounded-circle img-thumbnail w-200"
+            />
+            <h2>Samantha Torres</h2>
+            <p>
+              Especialista em Estratégias de Conteúdo, Com sua paixão e
+              expertise no mercado de marketing de mídias sociais, ela está
+              pronta para compartilhar seus segredos sobre como criar e
+              distribuir conteúdo de alta qualidade para impulsionar sua
+              presença online
+            </p>
+            <a href="#" class="btn btn-secondary">Mais detalhes</a>
+          </div>
+
+          <div class="col-lg-4 col-md-6 text-center mb-2">
+            <img
+              src="assets/perfil/perfil3.jpg"
+              alt="foto de perfil"
+              class="rounded-circle img-thumbnail w-200"
+            />
+            <h2 class="fw-normal">Fernando Santos</h2>
+            <p>
+              Especialista em Engajamento do Público, possui uma ampla
+              experiência em criar conteúdo envolvente e interativo, que captura
+              a atenção do público-alvo e incentiva a participação ativa
+            </p>
+            <a href="#" class="btn btn-secondary">Mais detalhes</a>
+          </div>
+
+        </div>
+      </section>
+
+      <!-- BLOCO DAS INFORMAÇÕES -->
+      <hr class="my-5">
+      <section class="container">
+        <section>
+          <div>
+            <h1></h1>
+            <h3></h3>
+            <p></p>
+
+          </div>
+
+          <div>
+            <img src="" alt="">
+          </div>
+        </section>
       </section>
     </main>
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
