--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <title>Evento anual de marketing</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-sm bg-dark sticky-top" data-bs-theme="dark">
+    <nav
+      class="navbar navbar-expand-sm bg-dark sticky-top"
+      data-bs-theme="dark"
+    >
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Marketing Mundial</a>
 
@@ -146,8 +149,9 @@
       <!-- PERFIS DOS PALESTRANTES -->
       <section class="container mt-3">
         <div class="row">
-
-          <div class="col-lg-4 col-md-6 d-flex flex-column justify-content-between align-items-center mb-2" >
+          <div
+            class="col-lg-4 col-md-6 d-flex flex-column justify-content-between align-items-center mb-2"
+          >
             <img
               src="assets/perfil/perfil1.png"
               alt=""
@@ -156,18 +160,21 @@
             <h2 class="fw-normal">Mauro Silva</h2>
             <p>
               Especialista em Marketing de Mídias Sociais Mauro é um
-              estrategista de mídias sociais experiente, com mais de 10 anos de atuação no mercado.
+              estrategista de mídias sociais experiente, com mais de 10 anos de
+              atuação no mercado.
             </p>
             <a href="#" class="btn btn-secondary">Mais detalhes</a>
           </div>
 
-          <div class="col-lg-4 col-md-6 text-center mb-2">
+          <div
+            class="col-lg-4 col-md-6 d-flex flex-column justify-content-between align-items-center mb-2"
+          >
             <img
               src="assets/perfil/perfil2.jpg"
               alt="imagem de perfil"
               class="rounded-circle img-thumbnail w-200"
             />
-            <h2>Samantha Torres</h2>
+            <h2 class="fw-normal">Samantha Torres</h2>
             <p>
               Especialista em Estratégias de Conteúdo, Com sua paixão e
               expertise no mercado de marketing de mídias sociais, ela está
@@ -178,7 +185,9 @@
             <a href="#" class="btn btn-secondary">Mais detalhes</a>
           </div>
 
-          <div class="col-lg-4 col-md-6 text-center mb-2">
+          <div
+            class="col-lg-4 col-md-6 d-flex flex-column justify-content-between align-items-center mb-2"
+          >
             <img
               src="assets/perfil/perfil3.jpg"
               alt="foto de perfil"
@@ -192,23 +201,73 @@
             </p>
             <a href="#" class="btn btn-secondary">Mais detalhes</a>
           </div>
-
         </div>
       </section>
 
       <!-- BLOCO DAS INFORMAÇÕES -->
-      <hr class="my-5">
+      <hr class="my-5"/>
       <section class="container">
-        <section>
-          <div>
-            <h1></h1>
-            <h3></h3>
-            <p></p>
-
+        <section class="row d-flex align-items-center">
+          <div class="col-md-7">
+            <h1>Palestrantes Inspiradores.</h1>
+            <h3>Inscreva-se agora e aprenda com os melhores!</h3>
+            <p class="lead">
+              Descubra as mentes brilhantes que irão transformar sua visão sobre
+              marketing de mídias sociais.
+            </p>
           </div>
+          <div class="col-md-5">
+            <img
+              src="assets/imagens/blocos/bloco1.jpg"
+              alt="figura de palestra"
+              class="w-500 rounded shadow-lg img-fluid"
+            />
+          </div>
+        </section>
 
-          <div>
-            <img src="" alt="">
+        <hr class="my-5"/>
+
+        <section class="row d-flex align-items-center">
+          <div class="col-md-7 order-md-2">
+            <h1>Conhecimentos Estratégicos em Destaque.</h1>
+            <h3>
+              Domine as principais táticas de mídias sociais para impulsionar
+              seu negócio!
+            </h3>
+            <p class="lead">
+              Descubra as estratégias comprovadas que irão aumentar sua presença
+              online e alcançar o sucesso desejado.
+            </p>
+          </div>
+          <div class="col-md-5 order-md-1">
+            <img
+              src="assets/imagens/blocos/bloco2.jpg"
+              alt="imagem de um smartphone"
+              class="w-500 rounded shadow-lg img-fluid"
+            />
+          </div>
+        </section>
+
+        <hr class="my-5"/>
+
+        <section class="row d-flex align-items-center">
+          <div class="col-md-7">
+            <h1>Networking e Oportunidades de Negócios.</h1>
+            <h3>
+              Conecte-se com os líderes da indústria e amplie sua rede de
+              contatos!
+            </h3>
+            <p class="lead">
+              Faça parte de um evento exclusivo que oferece oportunidades únicas
+              para conhecer e interagir com profissionais influentes.
+            </p>
+          </div>
+          <div class="col-md-5">
+            <img
+              src="assets/imagens/blocos/bloco3.jpg"
+              alt=""
+              class="w-500 rounded shadow-lg img-fluid"
+            />
           </div>
         </section>
       </section>
