--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
     <link rel="stylesheet" href="css/style.css" />
     <title>Evento anual de marketing</title>
   </head>
@@ -205,7 +209,7 @@
       </section>
 
       <!-- BLOCO DAS INFORMAÇÕES -->
-      <hr class="my-5"/>
+      <hr class="my-5" />
       <section class="container">
         <section class="row d-flex align-items-center">
           <div class="col-md-7">
@@ -225,7 +229,7 @@
           </div>
         </section>
 
-        <hr class="my-5"/>
+        <hr class="my-5" />
 
         <section class="row d-flex align-items-center">
           <div class="col-md-7 order-md-2">
@@ -248,7 +252,7 @@
           </div>
         </section>
 
-        <hr class="my-5"/>
+        <hr class="my-5" />
 
         <section class="row d-flex align-items-center">
           <div class="col-md-7">
@@ -272,6 +276,39 @@
         </section>
       </section>
     </main>
+    <hr class="my-5" />
+
+    <footer class="container">
+      <section class="row d-flex justify-content-between">
+        <div class="col-md-6">
+          <p>
+            &copy; 2023 Marketing Mundial | <a href="#">Privacidade</a> |
+            <a href="#"></a>Políticas
+          </p>
+        </div>
+
+        <div class="col-md-6">
+          <!-- ÍCONES REDES SOCIAIS -->
+          <div>
+            <a href="#"
+              ><i class="fa-brands fa-youtube" style="color: #9b9da1"></i
+            ></a>
+            <a href="#"
+              ><i class="fa-brands fa-twitter" style="color: #9b9da1"></i
+            ></a>
+            <a href="#"
+              ><i class="fa-brands fa-instagram" style="color: #9b9da1"></i
+            ></a>
+            <a href="#"
+              ><i class="fa-brands fa-tiktok" style="color: #9b9da1"></i
+            ></a>
+            <a href="#"
+              ><i class="fa-brands fa-facebook" style="color: #9b9da1"></i
+            ></a>
+          </div>
+        </div>
+      </section>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
