finalizado site bootstrap marketing

--- a/index.html
+++ b/index.html
@@ -3,15 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
     />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    /> -->
+    <link rel="stylesheet" href="css/style.css"/>
+    <!-- LOCAL -->
+
+    <link
+      rel="stylesheet"
+      href="bootstrap-5.3.0/bootstrap-5.3.0-dist/css/bootstrap.min.css"
     />
-    <link rel="stylesheet" href="css/style.css" />
+    <link
+      rel="stylesheet"
+      href="bootstrap-5.3.0/fontawesome-free-6.4.0/css/all.min.css"
+    />
+
     <title>Evento anual de marketing</title>
   </head>
   <body>
@@ -276,40 +287,41 @@
         </section>
       </section>
     </main>
+
     <hr class="my-5" />
 
-    <footer class="container">
-      <section class="row d-flex justify-content-between">
-        <div class="col-md-6">
+    <footer class="container-fluid bg-dark text-white py-3">
+      <section class="row">
+        <div class="col-md-9">
           <p>
             &copy; 2023 Marketing Mundial | <a href="#">Privacidade</a> |
             <a href="#"></a>Políticas
           </p>
         </div>
 
-        <div class="col-md-6">
+        <div class="col-md-3">
           <!-- ÍCONES REDES SOCIAIS -->
-          <div>
-            <a href="#"
-              ><i class="fa-brands fa-youtube" style="color: #9b9da1"></i
+          <div class="fs-5 d-flex justify-content-evenly social">
+            <a href="#" class="text-white"
+              ><i class="fa-brands fa-youtube"></i
             ></a>
-            <a href="#"
-              ><i class="fa-brands fa-twitter" style="color: #9b9da1"></i
+            <a href="#" class="text-white"
+              ><i class="fa-brands fa-twitter"></i
             ></a>
-            <a href="#"
-              ><i class="fa-brands fa-instagram" style="color: #9b9da1"></i
+            <a href="#" class="text-white"
+              ><i class="fa-brands fa-instagram"></i
             ></a>
-            <a href="#"
-              ><i class="fa-brands fa-tiktok" style="color: #9b9da1"></i
+            <a href="#" class="text-white"
+              ><i class="fa-brands fa-tiktok"></i
             ></a>
-            <a href="#"
-              ><i class="fa-brands fa-facebook" style="color: #9b9da1"></i
+            <a href="#" class="text-white"
+              ><i class="fa-brands fa-facebook"></i
             ></a>
           </div>
         </div>
       </section>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="bootstrap-5.3.0/bootstrap-5.3.0-dist/js/bootstrap.min.js"></script>
   </body>
 </html>
