--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <link
+    <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
     />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-    /> -->
+    />
     <link rel="stylesheet" href="css/style.css"/>
     <!-- LOCAL -->
-
+<!-- 
     <link
       rel="stylesheet"
       href="bootstrap-5.3.0/bootstrap-5.3.0-dist/css/bootstrap.min.css"
@@ -21,7 +21,7 @@
     <link
       rel="stylesheet"
       href="bootstrap-5.3.0/fontawesome-free-6.4.0/css/all.min.css"
-    />
+    /> -->
 
     <title>Evento anual de marketing</title>
   </head>
@@ -48,10 +48,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href=".//">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Cadastro</a>
+              <a class="nav-link" href="pages/cadastro.html">Cadastro</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Lista de usuários</a>
@@ -322,6 +322,6 @@
       </section>
     </footer>
 
-    <script src="bootstrap-5.3.0/bootstrap-5.3.0-dist/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
