--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -18,7 +18,7 @@
   <title>Evento anual de marketing</title>
 </head>
 
-<body class="fonte">
+<body class="">
   <nav class="navbar navbar-expand-sm bg-dark sticky-top" data-bs-theme="dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Marketing Mundial</a>
@@ -31,7 +31,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link " aria-current="page" href="../">Home</a>
+            <a class="nav-link" aria-current="page" href="../">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active" href="#">Cadastro</a>
@@ -214,7 +214,8 @@
   </footer>
 
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>  
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="../js/script.js"></script>  
 </body>
 
 </html>
