--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -16,7 +16,7 @@
     <!-- google fontes -->
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
     <link
       href="https://fonts.googleapis.com/css2?family=Borel&display=swap"
       rel="stylesheet"
@@ -95,7 +95,7 @@
               type="email"
               name="email"
               id="email"
-              class="form-control"
+              class="form-control border"
               placeholder="email@email.com"
             />
           </div>
@@ -174,7 +174,7 @@
         </section>
 
         <div class="col-md-6 mx-auto mb-2">
-          <button class="btn btn-primary col-12">Verificar Escolaridade</button>
+          <button id="btnEscolaridade" class="btn btn-primary col-12">Verificar Escolaridade</button>
         </div>
 
         <!-- CAMPO SWITCH: TERMOS DE CONTRATO -->
