--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -16,7 +16,7 @@
     <!-- google fontes -->
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Borel&display=swap"
       rel="stylesheet"
@@ -145,7 +145,7 @@
               name="escolaridade"
               id="fundamental"
               value="fundamental"
-              class="form-check-input"
+              class="form-check-input" checked
             />
             <label for="fundamental" class="form-check-label"
               >Fundamental</label
@@ -174,7 +174,9 @@
         </section>
 
         <div class="col-md-6 mx-auto mb-2">
-          <button id="btnEscolaridade" class="btn btn-primary col-12">Verificar Escolaridade</button>
+          <button id="btnEscolaridade" class="btn btn-primary col-12">
+            Verificar Escolaridade
+          </button>
         </div>
 
         <!-- CAMPO SWITCH: TERMOS DE CONTRATO -->
