finalizado formulario javascript

--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -145,7 +145,8 @@
               name="escolaridade"
               id="fundamental"
               value="fundamental"
-              class="form-check-input" checked
+              class="form-check-input"
+              checked
             />
             <label for="fundamental" class="form-check-label"
               >Fundamental</label
@@ -280,6 +281,10 @@
               placeholder="descreva brevemente sua opinião"
               class="form-control"
             ></textarea>
+
+            <p class="text-end">
+              Total de caracteres restantes <span id="restante">0</span>/20
+            </p>
           </div>
         </section>
 
