iniciado lista de usuario

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               <a class="nav-link" href="pages/cadastro.html">Cadastro</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Lista de usuários</a>
+              <a class="nav-link" href="pages/usuarios.html">Lista de usuários</a>
             </li>
           </ul>
         </div>
