--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -51,11 +51,11 @@
               <a class="nav-link" aria-current="page" href="../">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="#">Cadastro</a>
+              <a class="nav-link active" href="">Cadastro</a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="#">Lista de usuários</a>
+              <a class="nav-link" href="usuarios.html">Lista de usuários</a>
             </li>
           </ul>
         </div>
